--- a/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/strings.xml
+++ b/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="anadir_button">Añadir</string>
 
     <string name="cancelar_button">Cancelar</string>
-
+    <string name="correo_hint">Correo</string>
+    <string name="telefono_hint">Telefono</string>
 
 </resources>
